# mos

./: .dockerignore  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  MYSQL_MIGRATION_GUIDE.md  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_DEPLOYMENT_GUIDE.md  __init__.py  app.py  build.sh  cleanup.py  cookies.txt  cookies_fashion.txt  cookies_main.txt  cookies_test.txt  database.db  db.py  deploy_setup.py  deploy_to_fly.sh  fly.toml  fly_deploy_guide.md  fly_production_checklist.md  forms.py  gunicorn.conf.py  missing_features_analysis.md  models.py  models_additional.py  mysql_setup.py  production_app.py  pyproject.toml  pythonanywhere_config.py  render.yaml  replit.md  requirements.txt  seed.py  seed_data.py  start_postgresql.sh  utils.py
.agents/: agent_assets_metadata.toml
apps/bulk/: routes.py
attached_assets/: Pasted--printWindow-document-close-function-addToCart-productId-productName-productPrice-p-1754831001731_1754831001732.txt  Pasted-You-are-to-build-a-full-stack-Python-Flask-PostgreSQL-web-application-called-Cloud-POS-Inventory-1754645464765_1754645464766.txt
blueprints/: admin.py  admin_backup.py  auth.py  cashier.py  customers.py  inventory.py  pos.py  pos_api.py  pos_clean.py  pos_new.py  reports.py  returns.py  sales.py  store_assignment_helper.py  store_management.py  stores.py
descriptions/: kdp_bulk_creator.txt  kdp_generator.txt  kdp_niche_finder.txt  kdp_optimizer.txt  legal_risk_checker.txt
migrations/: deploy_migration.py  fly_production_migration.py  simple_deploy_migration.py
templates/: base.html  dashboard.html  home.html
(+90 files in other folders)
