[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "bcrypt>=4.3.0",
    "qrcode>=8.2",
    "xlsxwriter>=3.2.5",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
]
